Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0-rc1
-
Windows 7 64 bit
Description
- In "Tools" -> "Options..." -> "Help" -> "General" select "On help start:" "Show a Blank Page".
- Restart Creator.
- Go to Help mode.
Creator shows a blank page. - Click "Add Bookmark".
Nothing happens.
Not adding a bookmark to a blank page makes sense. But when this is not support to work, the icon should be disabled.