Help: Disable Add Bookmark action when current page is blank

Task-number: QTCREATORBUG-14204
Change-Id: I5d4a7ada10f0d69363e96bb4efd158444a051b71
Reviewed-by: David Schulz <david.schulz@qt.io>